--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>Interfaces_MCP</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>erpweb</name>
+    <name>erpweblocal</name>
     
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
